# cassette-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  REPORT.md  REPORT_v2.md  STATUS.md  THIRD-PARTY-LICENSES.md  agents.md  canvas_boot.txt  live_frame.txt  ruff.toml  run_acoustic_close_sweep.py
RESULTS/: carmenta_customer_competitor_report.html
app/: README.md
companion/: README.md  app.js  floor_manifest.json  index.html  manifest.webmanifest  r0_manifest.json  r1_manifest.json  r2_manifest.json  r3_manifest.json  recorder-worklet.js  serve_tunnel.sh  styles.css  sw.js  wav.js
docs/: ACOUSTIC_ASSAULT.md  ADVICE_BRIEFING.md  COMPANION_APP_DESIGN.md  REAL_CHANNEL.md  ROADMAP.md  acoustic_modem_lab_log.md  acoustic_modem_research.md  acoustic_speaker_iphone.md  audio_magic_deep.html  audio_magic_overview.html  capacity_deepdive2_hypotheses.md  capacity_deepdive2_results.md  capacity_pushing_hypotheses.md  capacity_pushing_results.md  capture_experiments.md  cassette_format.md  design_brief_martin.md  encoding_hypotheses.md  encoding_hypotheses_results.md  kickstarter_planning.md  realworld_transmission.md  volumes.html
magnetic-vault/: CNAME  SHOP_SETUP.md  about.html  disclaimer.html  (+3 more)
rust/cassette-codec/: Cargo.toml
rust/cassette-codec-wasm/: Cargo.toml
rust/cassette-codec-wasm/src/: lib.rs
rust/cassette-codec/src/: combo.rs  decoder.rs  dqpsk.rs  framing.rs  global_sync.rs  lib.rs  rs.rs  sync.rs
rust/cassette-codec/tests/: failure_paths.rs  floor_parity.rs  narrowband_parity.rs  r0_ensemble.rs  r0_parity.rs  r1_parity.rs  r2_parity.rs  r3_parity.rs
(+916 files in other folders)
