[package]
name = "cassette-codec-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "WASM bindings for cassette-codec — used by the Magnetic Vault companion app."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cassette-codec = { path = "../cassette-codec" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
