[package]
name = "cassette-codec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust decoder for the cassette-ai acoustic data tape (R-1 combinatorial-MFSK floor rung). Consumed by sagascript and the companion app."

[dependencies]
rustfft = "6"

[dev-dependencies]
hound = "3"          # WAV I/O for parity tests
serde = { version = "1", features = ["derive"] }
serde_json = "1"    # load Python-generated parity fixtures
